# tenthousandmeters

./: .gitignore  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  nginx-dev.conf  nginx-prod.conf  nginx.conf  pelicanconf.py
content/blog/: python_bts_01.md  python_bts_02.md  python_bts_03.md  python_bts_04.md  python_bts_05.md  (+8 more)
etc/: nginx-dev.conf  nginx.conf
output/: 404.html  about.html  archives.html  index.html  materials.html  tags.html
pelican/: pelicanconf.py
website_generator/: .dockerignore  Dockerfile  entrypoint.sh  pelicanconf.py  pyproject.toml  requirements.in  requirements.txt
website_generator/content/blog/: 9921_from_vscode_to_zed.md  9922_sqlite_concurrent_writes.md  brtlx_announcement.md  holiday_readings.md  python_bts_01.md  python_bts_02.md  python_bts_03.md  python_bts_04.md  python_bts_05.md  python_bts_06.md  python_bts_07.md  python_bts_08.md  python_bts_09.md  python_bts_10.md  python_bts_11.md  python_bts_12.md  python_bts_13.md  ttm_repo_goes_public.md
website_generator/content/pages/: 404.md  about.md  materials.md
website_generator/links_updater/: feeds.json  links_updater.py
website_generator/links_updater/templates/: links-page-1.md.jinja2  links-page-n.md.jinja2
website_generator/links_updater/tests/: test_links_updater.py
website_generator/links_updater/tests/sample_feeds/: atom1.0.xml  bad_url.xml  incomplete.xml  malicious.xml
website_generator/themes/notmyidea/static/css/: main.css
website_generator/themes/notmyidea/templates/: analytics.html  article.html  base.html
(+26 files in other folders)
